Updated GitHub Actions for feature engineering, training, and inference

--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -1,12 +1,12 @@
-name: taxi_rides_hourly_features_pipeline
+name: citibike_feature_engineering_pipeline
 
 on:
   schedule:
-    - cron: '2 * * * *' # Runs every hour
-  workflow_dispatch: # Allows manual triggering of the workflow
+    - cron: '2 * * * *'  # Runs every hour
+  workflow_dispatch:       # Allows manual trigger
 
 jobs:
-  run-python-script:
+  feature-engineering:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,14 +16,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11' # Specify the Python version
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_feature_pipeline.txt # Install dependencies if a requirements file exists
+          pip install -r requirements.txt
 
-      - name: Run new data fetch pipeline and load to hopsworks
-        env:
-          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY}}
-        run: python -m src.feature_pipeline
+      - name: Run Feature Engineering Script
+        run: python scripts/feature_engineering.py
