--- a/.github/workflows/model_training_pipeline.yaml
+++ b/.github/workflows/model_training_pipeline.yaml
@@ -1,12 +1,12 @@
-name: model_training_pipeline
+name: citibike_model_training_pipeline
 
 on:
   schedule:
-    - cron: '0 0 * * 1' # Runs every monday
-  workflow_dispatch: # Allows manual triggering of the workflow
+    - cron: '0 0 * * 1'  # Runs every Monday at midnight
+  workflow_dispatch:      # Allows manual trigger
 
 jobs:
-  run-python-script:
+  model-training:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,14 +16,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11' # Specify the Python version
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt # Install dependencies if a requirements file exists
+          pip install -r requirements.txt
 
-      - name: Train model on new data
-        env:
-          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY}}
-        run: python -m pipelines.model_training_pipeline
+      - name: Train Model
+        run: python scripts/train_model.py
