--- a/.github/workflows/inference_pipeline.yaml
+++ b/.github/workflows/inference_pipeline.yaml
@@ -1,14 +1,14 @@
-name: taxi_rides_hourly_inference_pipeline
+name: citibike_inference_pipeline
 
 on:
   workflow_run:
-    workflows: ["taxi_rides_hourly_features_pipeline"]
+    workflows: ["citibike_feature_engineering_pipeline"]
     types:
       - completed
-  workflow_dispatch: # Allows manual triggering of the workflow
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
-  run-python-script:
+  inference:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,14 +18,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11' # Specify the Python version
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt # Install dependencies if a requirements file exists
+          pip install -r requirements.txt
 
-      - name: Run new data fetch pipeline and load to hopsworks
-        env:
-          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY}}
-        run: python -m pipelines.inference_pipeline
+      - name: Run Inference Script
+        run: python scripts/inference.py
