--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -24,4 +24,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Feature Engineering Script
-        run: python scripts/feature_engineering.py
+        run: python src/feature_pipeline.py
