--- a/.github/workflows/inference_pipeline.yaml
+++ b/.github/workflows/inference_pipeline.yaml
@@ -26,5 +26,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Inference Script
+        env:
+          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: |
           PYTHONPATH=. python src/inference.py
